--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -2,6 +2,7 @@
     background: #d7e7c9;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .AboutMe h4 {
