--- a/src/css/MenuBar.css
+++ b/src/css/MenuBar.css
@@ -2,6 +2,7 @@
     background: #a7c68b;
     border-radius: 10px;
     margin-top: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .MenuBar button {
