--- a/src/css/MenuDate.css
+++ b/src/css/MenuDate.css
@@ -1,5 +1,6 @@
 .MenuDate {
     color: #465c47;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 17px;
+    margin: 7px;
+    text-align: end;
 }
