Added Date and Time

--- a/src/css/MenuDate.css
+++ b/src/css/MenuDate.css
@@ -2,5 +2,6 @@
     color: #465c47;
     font-size: 17px;
     margin: 7px;
-    text-align: end;
+    display: flex;
+    justify-content: space-between;
 }
