--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -16,7 +16,8 @@
 
 .Projects img {
     border-radius: 10px;
-    margin: 20px;
+    margin: 10px 20px 20px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .Projects a {
@@ -26,7 +27,7 @@
 
 .Projects button {
     background: #465c47;
-    margin: 5px;
+    margin: 5px 0px 10px;
     padding: 8px;
     border: none;
     border-radius: 4px;
