--- a/src/css/Certifications.css
+++ b/src/css/Certifications.css
@@ -19,10 +19,6 @@
 
 .Certifications img {
     margin: 10px;
+    border: 5px solid #fff;
     border-radius: 5px;
-    transition: all 200ms ease-in-out;
-}
-
-.Certifications img:hover {
-    scale: 1.1;
 }
