--- a/src/css/ContactMe.css
+++ b/src/css/ContactMe.css
@@ -1,6 +1,6 @@
 .ContactMe {
     background: #d7e7c9;
-    padding: 20px;
+    padding: 20px 10px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
@@ -14,7 +14,7 @@
 .ContactMe p {
     color: #465c47;
     line-height: 2;
-    margin: 10px 60px;
+    margin: 10px 30px;
 }
 
 .ContactMe a {
@@ -36,5 +36,5 @@
 .ContactMe .ContactMe-location {
     font-size: 17px;
     color: #465c47;
-    margin: 20px;
+    margin: 15px;
 }
