--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -8,7 +8,7 @@
     margin: 10px 0px 20px;
 }
 
-.Projects p {
+.Projects .Projects-text {
     color: #465c47;
     line-height: 2;
     margin: 0px 60px;
