--- a/src/css/ContactMe.css
+++ b/src/css/ContactMe.css
@@ -14,7 +14,7 @@
 .ContactMe .ContactMe-text {
     color: #465c47;
     line-height: 2;
-    margin: 10px 30px;
+    margin: 10px;
 }
 
 .ContactMe a {
