--- a/src/css/Certifications.css
+++ b/src/css/Certifications.css
@@ -14,6 +14,7 @@
 .Certifications .Certifications-text {
     color: #465c47;
     line-height: 2;
+    margin: 10px 0px;
 }
 
 .Certifications img {
