--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -11,7 +11,7 @@
 .Projects .Projects-text {
     color: #465c47;
     line-height: 2;
-    margin: 0px 60px;
+    margin: 10px;
 }
 
 .Projects img {
