--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.MainPage .MainPage-text {
+    margin: 5px;
+}
+
 .MainPage .MainPage-photo {
     overflow: hidden;
     border-radius: 50%;
