--- a/src/css/MenuBar.css
+++ b/src/css/MenuBar.css
@@ -1,5 +1,5 @@
 .MenuBar .MenuBar-navbar {
-    background: #a7c68b;
+    background: #1F2937;
     border-radius: 10px;
     margin-top: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
@@ -14,12 +14,12 @@
 
 .MenuBar a {
     text-decoration: none;
-    color: #465c47;
+    color: #F9FAF8;
     font-size: 20px;
     transition: all 150ms ease-in-out;
 }
 
 .MenuBar a:hover {
-    color: #1c261d;
+    color: #fa7c6b;
     text-decoration: underline;
 }
