--- a/src/css/Certifications.css
+++ b/src/css/Certifications.css
@@ -1,5 +1,5 @@
 .Certifications {
-    background: #1F2937;
+    background: #c5c5c5;
     padding: 20px 10px;
     border-radius: 10px;
     text-align: center;
@@ -7,20 +7,20 @@
 }
 
 .Certifications h4 {
-    color: #F9FAF8;
+    color: #1F2937;
     margin: 10px 0px 20px;
     font-size: 30px;
     font-weight: 900;
 }
 
 .Certifications .Certifications-text {
-    color: #E5E7EB;
+    color: #1F2937;
     line-height: 2;
     margin: 10px 0px;
 }
 
 .Certifications img {
     margin: 5px;
-    border: 5px solid #fff;
+    border: 2px solid #1F2937;
     border-radius: 5px;
 }
