--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -15,11 +15,12 @@
 .MainPage .MainPage-photo {
     overflow: hidden;
     border-radius: 50%;
+    border: 1px solid #1F2937;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .MainPage .MainPage-name {
-    color: #fa7c6b;
+    color: #f72509;
     text-shadow: 1px 5px 7px rgba(0, 0, 0, 0.2);
 }
 
