--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -17,6 +17,7 @@
 }
 
 .Projects img {
+    border: 1px solid #1F2937;
     border-radius: 10px;
     margin: 10px 20px 20px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
@@ -24,11 +25,11 @@
 
 .Projects a {
     text-decoration: none;
-    color: #1F2937;
+    color: #f6f5f5;
 }
 
 .Projects button {
-    background: #E5E7EB;
+    background: #696969;
     margin: 5px 0px 10px;
     padding: 8px;
     border: none;
@@ -37,7 +38,7 @@
 }
 
 .Projects button:hover {
-    background: #fa7c6b;
+    background: #1F2937;
 }
 
 .Projects .Projects-card {
@@ -49,8 +50,8 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
-    background: #1F2937;
-    color: #E5E7EB;
+    background: #c5c5c5;
+    color: #1F2937;
     transition: all 200ms ease-in-out;
 }
 
