--- a/src/css/ContactMe.css
+++ b/src/css/ContactMe.css
@@ -21,12 +21,16 @@
 
 .ContactMe a {
     font-size: 30px;
-    color: #1F2937;
+    color: #161414;
     margin: 20px;
 }
 
-.ContactMe a:hover {
-    color: #f72509;
+.ContactMe .ContactMe-icon-linkedin {
+    color: #0B5FBB;
+}
+
+.ContactMe .ContactMe-icon-github {
+    color: #161414;
 }
 
 .ContactMe .ContactMe-contact {
