--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,24 @@
 .App {
     font-family: "Poppins", sans-serif;
     background: #f5f5f5;
-    padding: 15px;
+    margin: 0;
+    padding: 0;
+}
+
+.App .App-sidebar {
+    background-color: #6F6D70;
+    color: #FFFFFF;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
+}
+
+.App .App-sidebar-date, .App-sidebar-profile {
+    background-color: #443F43;
+}
+
+.App .App-content {
+    background-color: #F3F3F3;
+}
+
+.App .App-content-main {
+    background-image: url(/src/images/scott-webb-_JpQfgcCa2o-unsplash.jpg);
 }
