--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -1,21 +1,25 @@
 .AboutMe {
-    background: #c5c5c5;
-    padding: 20px 10px;
-    border-radius: 10px;
-    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
+    margin: 40px auto;
 }
 
 .AboutMe h4 {
-    color: #1F2937;
+    color: #443F43;
     text-align: center;
-    margin: 10px 0px 20px;
+    margin: 30px 0px;
     font-size: 30px;
     font-weight: 900;
 }
 
 .AboutMe .AboutMe-text {
-    color: #1F2937;
+    color: #443F43;
     text-align: justify;
-    line-height: 2;
-    margin: 0px 30px;
+    line-height: 2.5;
+    margin: 0 12%;
+    font-size: 17px;
+}
+
+.AboutMe .AboutMe-text-name {
+    color: #DA5663;
+    font-weight: 600;
+    font-size: 20px;
 }
