--- a/src/css/Certifications.css
+++ b/src/css/Certifications.css
@@ -1,27 +1,85 @@
 .Certifications {
-    background: #c5c5c5;
-    padding: 20px 10px;
-    border-radius: 10px;
+    margin: 40px auto;
     text-align: center;
-    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .Certifications h4 {
-    color: #1F2937;
-    margin: 10px 0px 20px;
+    color: #443F43;
+    margin: 30px 0px;
     font-size: 30px;
     font-weight: 900;
 }
 
 .Certifications .Certifications-text {
-    color: #1F2937;
-    line-height: 2;
-    margin: 10px 0px;
+    color: #443F43;
+    line-height: 2.5;
 }
 
-.Certifications img {
-    max-width: 270px;
-    margin: 5px;
-    border: 2px solid #1F2937;
+.Certifications .Certifications-certificate {
+    position: relative;
+    width: 350px;
+    margin: 5%;
+}
+
+.Certifications .Certifications-certificate img {
+    display: block;
+    width: 100%;
+    border: 1px solid #443F43;
     border-radius: 5px;
+}
+
+.Certifications .Certifications-certificate-overlay {
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+
+.Certifications .Certifications-certificate-overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+
+.Certifications .Certifications-certificate-overlay:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Certifications .Certifications-certificate-overlay:hover > * {
+    transform: translateY(0);
+}
+
+.Certifications .Certifications-certificate-overlay-title {
+    font-size: 23px;
+    font-weight: 600;
+}
+
+.Certifications .Certifications-certificate-overlay a {
+    color: #443F43;
+    font-size: 30px;
+    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all 200ms ease-in-out;
+}
+
+.Certifications .Certifications-certificate-overlay a:hover {
+    color: #FFFFFF;
+    background-color: #443F43;
+    border: 1px solid #FFFFFF;
 }
