--- a/src/css/ContactMe.css
+++ b/src/css/ContactMe.css
@@ -1,21 +1,27 @@
 .ContactMe {
-    background: #c5c5c5;
-    padding: 20px 10px;
-    border-radius: 10px;
+    padding: 20px 0;
     text-align: center;
-    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
+    background-image: url(/src/images/scott-webb-_JpQfgcCa2o-unsplash.jpg);
+}
+
+.ContactMe .ContactMe-container {
+    width: fit-content;
+    padding: 10px;
+    background-color: rgb(225, 221, 220, 0.4);
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(118, 117, 116, 0.4);
 }
 
 .ContactMe h4 {
-    color: #1F2937;
-    margin: 10px 0px 20px;
+    color: #443F43;
+    margin: 30px 0px;
     font-size: 30px;
     font-weight: 900;
 }
 
 .ContactMe .ContactMe-text {
-    color: #1F2937;
-    line-height: 2;
+    color: #797377;
+    line-height: 2.5;
     margin: 10px;
 }
 
@@ -33,14 +39,18 @@
     color: #161414;
 }
 
+.ContactMe .ContactMe-icon {
+    color: #DA5663;
+}
+
 .ContactMe .ContactMe-contact {
     font-size: 18px;
-    color: #1F2937;
+    color: #797377;
     margin: 10px;
 }
 
 .ContactMe .ContactMe-location {
     font-size: 15px;
-    color: #1F2937;
+    color: #797377;
     margin: 10px;
 }
