--- a/src/css/MenuBar.css
+++ b/src/css/MenuBar.css
@@ -1,24 +1,29 @@
-.MenuBar .MenuBar-navbar {
-    background: #c5c5c5;
-    border-radius: 10px;
-    margin-top: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-}
-
 .MenuBar .MenuBar-container {
     display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-    padding: 15px;
+    flex-direction: column;
+    gap: 20px;
+    margin: 5% 0;
 }
 
 .MenuBar a {
+    font-size: 30px;
     text-decoration: none;
-    color: #1F2937;
-    font-size: 20px;
+    color: #FFFFFF;
 }
 
 .MenuBar a:hover {
-    color: #f72509;
-    font-weight: 600;
+    color: #EFDCD8;
+}
+
+.MenuBar .MenuBar-icons {
+    display: flex;
+    gap: 25px;
+}
+
+.MenuBar .MenuBar-icon-linkedin:hover {
+    color: #0B5FBB;
+}
+
+.MenuBar .MenuBar-icon-github:hover {
+    color: #161414;
 }
