--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,34 +1,121 @@
 .Projects {
     text-align: center;
-    padding: 20px;
+    margin: 40px auto;
 }
 
 .Projects h4 {
-    color: #1F2937;
-    margin: 10px 0px 20px;
+    color: #443F43;
+    margin: 30px 0px;
     font-size: 30px;
     font-weight: 900;
 }
 
 .Projects .Projects-text {
-    color: #1F2937;
-    line-height: 2;
+    color: #443F43;
     margin: 10px;
 }
 
-.Projects img {
-    border: 1px solid #1F2937;
-    border-radius: 10px;
-    margin: 10px 20px 20px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+.Projects .Projects-card {
+    position: relative;
+    width: 350px;
+    margin: 5%;
 }
 
-.Projects a {
+.Projects .Projects-card img {
+    display: block;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #443F43;
+}
+
+.Projects .Projects-card-overlay {
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+
+.Projects .Projects-card-overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+
+.Projects .Projects-card-overlay:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.Projects .Projects-card-overlay:hover > * {
+    transform: translateY(0);
+}
+
+.Projects .Projects-card-overlay-title {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.Projects .Projects-card-overlay-description {
+    margin: 5px;
+    font-size: 25px;
+}
+
+.Projects .Projects-icon-html {
+    color: #D84924;
+}
+
+.Projects .Projects-icon-css {
+    color: #2449D8;
+}
+
+.Projects .Projects-icon-javascript {
+    color: #EAD41C;
+}
+
+.Projects .Projects-icon-react {
+    color: #77D4F2;
+}
+
+.Projects .Projects-icon-bootstrap {
+    color: #8412F2;
+}
+
+.Projects .Projects-card-overlay a {
+    color: #443F43;
+    font-size: 25px;
+    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all 200ms ease-in-out;
+}
+
+.Projects .Projects-card-overlay a:hover {
+    color: #FFFFFF;
+    background-color: #443F43;
+    border: 1px solid #FFFFFF;
+}
+
+/* .Projects a {
     text-decoration: none;
     color: #f6f5f5;
-}
+} */
 
-.Projects button {
+/* .Projects button {
     background: #696969;
     margin: 5px 0px 10px;
     padding: 8px;
@@ -38,10 +125,10 @@
 }
 
 .Projects button:hover {
-    background: #1F2937;
-}
+    background: #443F43;
+} */
 
-.Projects .Projects-card {
+/* .Projects .Projects-card {
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -51,10 +138,10 @@
     border-radius: 10px;
     box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
     background: #c5c5c5;
-    color: #1F2937;
+    color: #443F43;
     transition: all 200ms ease-in-out;
-}
+} */
 
-.Projects .Projects-card:hover {
+/* .Projects .Projects-card:hover {
     scale: 1.1;
-}
+} */
