--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -1,34 +1,31 @@
 .Skills {
-    padding: 20px 0px;
+    margin: 40px auto;
+    text-align: center;
+    color: #443F43;
 }
 
 .Skills h4 {
-    color: #1F2937;
-    text-align: center;
-    margin: 10px 0px 20px;
+    margin: 30px 0px;
     font-size: 30px;
     font-weight: 900;
 }
 
-.Skills ul {
-    list-style: none;
-    display: table;
-    margin: 0 auto;
-    font-size: 20px;
-}
-
-.Skills li {
-    color: #1F2937;
-    line-height: 2;
-}
-
 .Skills a {
     text-decoration: none;
-    color: #161414;
+    color: #443F43;
 }
 
-.Skills .Skills-icons-description {
-    margin-right: 10px;
+.Skills .Skills-title {
+    font-size: 20px;
+    font-weight: 600;
+    border: 1px solid #443F43;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.Skills .Skills-text {
+    justify-content: center;
 }
 
 .Skills .Skills-icon-html {
@@ -53,8 +50,4 @@
 
 .Skills .Skills-icon-github {
     color: #161414;
-}
-
-.Skills .Skills-title {
-    font-weight: 600;
 }
